# kafka-client

./: LICENSE  README.md  pyproject.toml
kafka_client/: client.py
