[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kafka-client"
version = "1.0.0"
description = "A simple and lightweight wrapper around aiokafka"
authors = [
  { name="Karnosio", email="karnosio@ukr.net" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "aiokafka>=0.12.0"
]

[project.urls]
homepage = "https://github.com/Karnosio/kafka-client"
